--- a/index.css
+++ b/index.css
@@ -1,19 +1,21 @@
 *{
   box-sizing: border-box;
+  font-family: 'Courier Prime', monospace;
+  color: white;
 }
 
-body {
-  font-family: 'Courier New', Courier, monospace;
+body{
   background-image: url("./assets/images/title-background.jpg");
   background-repeat: no-repeat;
   background-size:cover;
   background-attachment:fixed;
-  color: white;
-  margin: 0px;
-  padding: 0px;
+
+  padding: 0;
 }
 
-#title-block{
+#title-section{
+  margin-top: 100px;
+  margin-bottom: 0px;
   border-bottom: 2px solid white;
   display: flex;
   flex-wrap: wrap;
@@ -37,28 +39,32 @@ body {
 }
 }
 
-#join-button {
+.join-button {
   border: 2px solid aqua;
   color: aqua;
   font-weight: bold;
   margin: 0px;
   padding: 18px;
   font-size: 18px;
-  font-family: 'Courier New', Courier, monospace;
   text-align: center; 
   background-color: rgba(0, 0, 0, 0.3);
+
 }
-#join-button:hover {
+.join-button:hover {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
 .desc {
   opacity: 0;
   text-align: center;
-  margin: 2vh;
+  margin: 50px 15%;
   font-style: italic;
 
   animation: descEnter 1s ease .75s 1 normal forwards;
+}
+.desc > p {
+  margin: 0px;
+  padding: 0px;
 }
 @keyframes descEnter {
 	0% {
@@ -69,41 +75,33 @@ body {
 		opacity: .75;
 	}
 }
-.desc > p {
-  margin: 0px;
-  padding: 0px;
-}
 
-.block{
-  margin: 0px;
+.section{
+    
+  margin:200px 15%;
   padding: 16px;
   border-left: 2px solid white;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   /* border-bottom: 2px solid white; */
 }
 
-#schedule-section {
-  background-color: white;
-  color: black;
-}
 
-#title-section{
-  display: flex;
-  flex-direction:column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  padding: 15px;
+.subtitle{
+  font-size: 28px;
 }
-
-section {
-  margin: 0px;
-  padding: 15px;
+.underlined-text {
+  text-decoration: underline;
 }
-
+ul{
+  list-style-type: none;
+}
 h1{
   font-size:48px;
 }
-h3{
-  font-size: 28px;
+h2{
+  font-size: 36px;
+}
+a{
+  text-decoration: none;
+  color: white;
 }
